ws_moveit/src/Diana7/include/DianaAPI.h

/*************************************** version 1.5***************************************/

DIANA_API int getJointCount(const char *strIpAddress = "");
/*************************************** version 1.7***************************************/

DIANA_API int inverseClosedFull(/*IN[6]*/ const double *pose, /*IN*/ const int lock_joint_index,
                                /*IN*/ const double lock_joint_position, /*IN[7]*/ double *ref_joints,
                                /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int getInverseClosedResultSize(/*IN*/ const int id, /*IN*/ const char *strIpAddress = "");
DIANA_API int getInverseClosedJoints(/*IN*/ const int id, /*IN*/ const int index, /*OUT*/ double *joints,
                                     /*IN*/ const char *strIpAddress = "");
DIANA_API int destoryInverseClosedItems(/*IN*/ const int id, /*IN*/ const char *strIpAddress = "");
DIANA_API int getGravInfo(/*IN[3]*/ double *grav, /*IN*/ const char *strIpAddress = "");
DIANA_API int setGravInfo(/*IN[3]*/ const double *grav, /*IN*/ const char *strIpAddress = "");
DIANA_API int getGravAxis(/*IN[3]*/ double *grav_axis, /*IN*/ const char *strIpAddress = "");
DIANA_API int setGravAxis(/*IN[3]*/ const double *grav_axis, /*IN*/ const char *strIpAddress = "");
DIANA_API int speedLOnTcp(/*IN[6]*/ double *speed, /*IN[2]*/ double *a, /*option*/ double t,
                          /*IN[6]*/ double *active_tcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int getTcpForceInToolCoordinate(/*OUT[6]*/ double *forces, /*IN*/ const char *strIpAddress = "");
DIANA_API int calculateJacobi(/*OUT[6*JOINT_COUNT]*/ double *dblJacobiMatrix, /*IN[7]*/ const double *dblJointPosition,
                              /*IN*/ int intJointCount, /*IN*/ const char *strIpAddress = "");
DIANA_API int calculateJacobiTF(/*OUT[6*JOINT_COUNT]*/ double *dblJacobiMatrix,
                                /*IN[7]*/ const double *dblJointPosition,
                                /*IN*/ int intJointCount, /*IN[6]*/ double *active_tcp = nullptr,
                                /*IN*/ const char *strIpAddress = "");