ws_moveit/src/Diana7/bin/DianaApi.py


def inverseClosedFull(pose, lock_joint_index, lock_joint_position, ref_joints, active_tcp=None, ipAddress=''):
    refJointsPosition = DIANA_JOINTS_POSITION()
    refJointsPosition.values = (c_double * 7)()
    for index in range(0, len(ref_joints)):
        refJointsPosition.values[index] = ref_joints[index]
    dianaPose = DIANA_TCP_POSE()
    dianaPose.values = (c_double * 6)()
    for index in range(0, len(pose)):
        dianaPose.values[index] = pose[index]
    ret = 0
    if active_tcp==None:
        use_active_tcp = c_void_p(0)
        api_mod.inverseClosedFull.argtypes = [POINTER(DIANA_TCP_POSE),c_int,c_double,POINTER(DIANA_JOINTS_POSITION),c_void_p, c_char_p]
        api_mod.inverseClosedFull.restype = c_int
        id = api_mod.inverseClosedFull(byref(dianaPose),lock_joint_index,lock_joint_position,byref(refJointsPosition), use_active_tcp, bytes(ipAddress.encode('utf-8')))
    else:
        arrActiveTcp = DIANA_ACTIVE_TCP()
        arrActiveTcp.values = (c_double*6)()
        for index in range(0, len(arrActiveTcp.values)):
            arrActiveTcp.values[index] = active_tcp[index]
        api_mod.inverseClosedFull.argtypes = [POINTER(DIANA_TCP_POSE),c_int,c_double,POINTER(DIANA_JOINTS_POSITION),POINTER(DIANA_ACTIVE_TCP), c_char_p]
        api_mod.inverseClosedFull.restype = c_int
        id = api_mod.inverseClosedFull(byref(dianaPose),lock_joint_index,lock_joint_position,byref(refJointsPosition), byref(arrActiveTcp), bytes(ipAddress.encode('utf-8')))
    return id

def getInverseClosedResultSize(id, ipAddress=''):
    api_mod.getInverseClosedResultSize.argtypes = [c_int, c_char_p]
    api_mod.getInverseClosedResultSize.restype = c_int
    size = api_mod.getInverseClosedResultSize(id, bytes(ipAddress.encode('utf-8')))
    return size

def getInverseClosedJoints(id, index, joints, ipAddress=''):
    dianaJoints = DIANA_JOINTS_POSITION()
    dianaJoints.values = (c_double * 7)()
    api_mod.getInverseClosedJoints.argtypes = [c_int, c_int, POINTER(DIANA_JOINTS_POSITION), c_char_p]
    api_mod.getInverseClosedJoints.restype = c_int
    size = api_mod.getInverseClosedJoints(id, index, dianaJoints, bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(joints)):
        joints[index] = dianaJoints.values[index]
    return size

def destoryInverseClosedItems(id, ipAddress=''):
    api_mod.destoryInverseClosedItems.argtypes = [c_int, c_char_p]
    api_mod.destoryInverseClosedItems.restype = c_int
    ret = api_mod.destoryInverseClosedItems(id, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getGravInfo(grav, ipAddress=''):
    gravInfo = DIANA_GRAV_INFO()
    gravInfo.values = (c_double * 3)()
    api_mod.getGravInfo.argtypes = [POINTER(DIANA_GRAV_INFO), c_char_p]
    api_mod.getGravInfo.restype = c_int
    ret = api_mod.getGravInfo(gravInfo, bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(grav)):
        grav[index] = gravInfo.values[index]
    return message(ret)

def setGravInfo(grav, ipAddress=''):
    gravInfo = DIANA_GRAV_INFO()
    gravInfo.values = (c_double * 3)()
    for index in range(0, len(grav)):
        gravInfo.values[index] = grav[index]
    api_mod.setGravInfo.argtypes = [POINTER(DIANA_GRAV_INFO), c_char_p]
    api_mod.setGravInfo.restype = c_int
    ret = api_mod.setGravInfo(gravInfo, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getGravAxis(grav, ipAddress=''):
    gravAxis = DIANA_AXIS_VECTOR()
    gravAxis.values = (c_double * 3)()
    api_mod.getGravAxis.argtypes = [POINTER(DIANA_AXIS_VECTOR), c_char_p]
    api_mod.getGravAxis.restype = c_int
    ret = api_mod.getGravAxis(gravAxis, bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(grav)):
        grav[index] = gravAxis.values[index]
    return message(ret)

def setGravAxis(grav, ipAddress=''):
    gravInfo = DIANA_AXIS_VECTOR()
    gravInfo.values = (c_double * 3)()
    for index in range(0, len(grav)):
        gravInfo.values[index] = grav[index]
    api_mod.setGravAxis.argtypes = [POINTER(DIANA_AXIS_VECTOR), c_char_p]
    api_mod.setGravAxis.restype = c_int
    ret = api_mod.setGravAxis(gravInfo, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def speedLOnTcp(speed, acc, t=0.0, ipAddress=''):
    dianaJointsSpeed = DIANA_JOINTS_SPEED_L()
    dianaJointsSpeed.values = (c_double * 6)()
    for index in range(0, len(dianaJointsSpeed.values)):
        dianaJointsSpeed.values[index] = speed[index]
    dianaJointsAcc = DIANA_JOINTS_ACC()
    dianaJointsAcc.values = (c_double * 2)()
    for index in range(0, len(dianaJointsAcc.values)):
        dianaJointsAcc.values[index] = acc[index]
    active_tcp = c_void_p(0)
    api_mod.speedLOnTcp.argtypes = [POINTER(DIANA_JOINTS_SPEED_L), POINTER(
        DIANA_JOINTS_ACC), c_double, c_void_p, c_char_p]
    api_mod.speedLOnTcp.restype = c_int
    ret = api_mod.speedLOnTcp(dianaJointsSpeed, dianaJointsAcc,
                            t, active_tcp, bytes(ipAddress.encode('utf-8')))
    return message(ret)
    
def getTcpForceInToolCoordinate(forces, ipAddress=''):
    dianaTcpForce = DIANA_TCP_FORCE()
    dianaTcpForce.values = (c_double * 6)()
    api_mod.getTcpForceInToolCoordinate.argtypes = [POINTER(DIANA_TCP_FORCE), c_char_p]
    api_mod.getTcpForceInToolCoordinate.restype = c_int
    ret = api_mod.getTcpForceInToolCoordinate(byref(dianaTcpForce),
                              bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(dianaTcpForce.values)):
        forces[index] = dianaTcpForce.values[index]
    return message(ret)

def calculateJacobi(matrixJacobi, joints, ipAddress=''):
    _joint_count = getJointCount(ipAddress)
    dianaJoints = DIANA_JOINTS_POSITION()
    dianaJoints.values = (c_double * 7)()
    for index in range(0, len(joints)):
        dianaJoints.values[index] = joints[index]
    dianaJacobiMatrix = DIANA_JACOBI_MATRIX()
    dianaJacobiMatrix.values = (c_double * 42)()
    api_mod.calculateJacobi.argtypes = [POINTER(DIANA_JACOBI_MATRIX), POINTER(DIANA_JOINTS_POSITION), c_int, c_char_p]
    api_mod.calculateJacobi.restype = c_int
    ret = api_mod.calculateJacobi(byref(dianaJacobiMatrix), dianaJoints, _joint_count, bytes(ipAddress.encode('utf-8')))
    if ret < 0:
        return message(ret)
    for index in range(0, _joint_count * 6):
        matrixJacobi[index] = dianaJacobiMatrix.values[index]
    return message(ret)
                             
def calculateJacobiTF(matrixJacobi, joints, toolMatrix, ipAddress=''):
    _joint_count = getJointCount(ipAddress)
    dianaJoints = DIANA_JOINTS_POSITION()
    dianaJoints.values = (c_double * 7)()
    for index in range(0, len(joints)):
        dianaJoints.values[index] = joints[index]
    dianaToolMatrix = DIANA_ACTIVE_TCP()
    dianaToolMatrix.values = (c_double * 6)()
    for index in range(0, len(toolMatrix)):
        dianaToolMatrix.values[index] = toolMatrix[index]
    dianaJacobiMatrix = DIANA_JACOBI_MATRIX()
    dianaJacobiMatrix.values = (c_double * 42)()
    api_mod.calculateJacobiTF.argtypes = [POINTER(DIANA_JACOBI_MATRIX),POINTER(DIANA_JOINTS_POSITION), c_int, POINTER(DIANA_ACTIVE_TCP), c_char_p]
    api_mod.calculateJacobiTF.restype = c_int
    ret = api_mod.calculateJacobiTF(byref(dianaJacobiMatrix), dianaJoints, _joint_count, dianaToolMatrix, bytes(ipAddress.encode('utf-8')))
    if ret < 0 :
        return message(ret)
    for index in range(0, _joint_count * 6):
        matrixJacobi[index] = dianaJacobiMatrix.values[index]
    return message(ret)
